# talk

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  LICENSE.md  Makefile  README.md  RELATION.md  TODO.md
include/: client.h  common.h  msg_queue.h  server.h  tlk_client.h  tlk_common.h  tlk_errors.h  tlk_linked_list.h  tlk_min_heap.h  tlk_msg_queue.h  tlk_semaphores.h  tlk_server.h  tlk_sockets.h  tlk_threads.h  tlk_users.h  tlk_util.h  users.h  util.h
src/client/: CMakeLists.txt  client.c  tlk_client.c
src/lib/: CMakeLists.txt  msg_queue.c  tlk_linked_list.c  tlk_min_heap.c  tlk_msg_queue.c  tlk_semaphores.c  tlk_sockets.c  tlk_threads.c  tlk_users.c  tlk_util.c  users.c  util.c
src/server/: CMakeLists.txt  server.c  tlk_server.c
